# peek

./: meson_options.txt
data/: com.uploadedlobster.peek.gschema.xml
src/: application.vala  defaults.vala  main.vala  meson.build  xdg-desktop-portal.vala
src/dbus/: README.md  freedesktop-portal-request.vala  freedesktop-portal-screen-cast.vala  freedesktop-portal-session.vala  generate.sh
src/post-processing/: ffmpeg-post-processor.vala
src/recording/: base-screen-recorder.vala  ffmpeg-screen-recorder.vala  gnome-shell-dbus-recorder.vala  pipewire-recorder.vala  recording-config.vala  screen-recorder-factory.vala  screen-recorder.vala
src/ui/: application-window.vala  preferences-dialog.vala
ui/: application-window.ui  preferences.ui
