option('build-tests',                type : 'boolean', value : true)
option('enable-keybinder',           type : 'feature', value : 'auto')
option('enable-file-chooser-native', type : 'boolean', value : true)
option('enable-gnome-shell',         type : 'boolean', value : true)
option('enable-xdg-desktop-portal',  type : 'boolean', value : true)
option('enable-open-file-manager',   type : 'boolean', value : true)
